[package]
name = "rainfusion"
description = "The WASM frontend for Rainfusion website."
version = "0.2.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]
compat = []

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
base64 = "0.10"
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Event',
    'EventTarget',
    'DomTokenList',
    'KeyboardEvent',
    'HtmlInputElement',
    'HtmlCollection',
]

[dev-dependencies]
fantoccini = "0.12"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1"
